# jobs-scrape-to-notion

./: .gitignore  main.py  pyproject.toml  requirements.txt  sheets_formula.txt
