[project]
name = "jobs-scrape-to-notion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "babel>=2.17.0",
    "google-auth>=2.40.3",
    "gspread>=6.2.1",
    "notion-client>=2.4.0",
    "pandas>=2.3.0",
    "python-dotenv>=1.1.1",
    "python-jobspy>=1.1.80",
]
